--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="header">
-    <h1>WEB PAGE TUTORIAL</h1>
+    <h1>WEB PAGE TUTORIAL1</h1>
 </div>
 <div class="topnav">
     <a href="../HTML/index.html">HOME</a>
